dhall/tests/type-inference/failure/unit/RecordTypeValueMember.txt
Type error: error: InvalidFieldType
 --> <current file>:1:7
  |
1 | { x : True }
  |       ^^^^ InvalidFieldType
  |
